@@ -1,3 +1,12 @@
+2010-08-31  Martin Robinson  <mrobinson@igalia.com>
+
+        Reviewed by Gustavo Noronha Silva.
+
+        [GTK] Fix 'make dist' in preparation of the 1.3.3 release
+        https://bugs.webkit.org/show_bug.cgi?id=44978
+
+        * GNUmakefile.am: Add missing and moved headers to the sources list.
+
 2010-08-31  Ryuan Choi  <ryuan.choi@samsung.com>
 
         Reviewed by Antonio Gomes.
